# VecQMDP

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  requirements.txt
docs/: STRtree.md  architecture.md  context_qmdp.md  net_belief.md  qmdp_trajectory_planner.md  reward_function.md  setup_guide_zh.md  state.md  trajectory_optimization.md  tutorial.md  utils.md  vec_qmdp.md
examples/docs/: rock_sample_pomdp.md
examples/rock_sample/: CMakeLists.txt  build_despot.sh  build_vec_qmdp.sh
examples/rock_sample/benchmark/: analyze.py  run_despot.sh  run_vecqmdp.sh
examples/rock_sample/src/base/: base_rock_sample.cpp  base_rock_sample.h
examples/rock_sample/src/rock_sample_despot/: main.cpp  rock_sample_despot.cpp
examples/rock_sample/src/rock_sample_vecqmdp/: main.cpp  rock_sample_dynamic_vecqmdp.cpp  rock_sample_dynamic_vecqmdp.hpp  rock_sample_static_vecqmdp.cpp  rock_sample_static_vecqmdp.hpp
include/collision/: STRtree.hpp
include/core/: net_belief.hpp  state.hpp
include/planning/: context_qmdp.hpp  qmdp_trajectory_planner.hpp  reward_functions.hpp  tracker.hpp  trajectory_optimization.hpp  vec_qmdp_ad.hpp  vec_qmdp_closed_planner.hpp  vec_qmdp_dynamic.hpp  vec_qmdp_static.hpp
include/utils/: aligned_allocator.hpp  geometry_utils.hpp  global_utils.hpp  map_utils.hpp  math_utils.hpp  occupancy_map.hpp  params.hpp  path_utils.hpp
python_planner/: __init__.py  vec_qmdp_planner_module.py
python_planner/qcpredictor/: __init__.py  qcnet.py  qcpredictor.py
python_planner/qcpredictor/feature_builders/: __init__.py  qcnet_feature_builder.py
python_planner/qcpredictor/modules/: qcnet_agent_encoder.py  qcnet_decoder.py  qcnet_encoder.py  qcnet_map_encoder.py
python_planner/qcpredictor/utils/: __init__.py
python_planner/scripts/config/common/scenario_filter/: test14_random.yaml  test_hard.yaml  val14_split.yaml
python_planner/scripts/config/simulation/planner/: vec_qmdp_planner.yaml
python_planner/utils/: __init__.py  agent_info.py  bfs_roadblock.py  map_utils_py.py  math_utils.py  route_utils.py
scripts/: build_vec_qmdp.sh
scripts/simulation/: run_nuboard.py  sim_planner.py
src/: CMakeLists.txt
src/collision/: CMakeLists.txt  STRtree.cpp
src/core/: CMakeLists.txt  net_belief.cpp  state.cpp
src/planning/: CMakeLists.txt  context_qmdp.cpp  dynamic_soa_pool.hpp  qmdp_trajectory_planner.cpp  reward_functions.cpp  tracker.cpp  trajectory_optimization.cpp  vec_qmdp_ad.cpp  vec_qmdp_closed_planner.cpp  vec_qmdp_dynamic.cpp  vec_qmdp_static.cpp
src/utils/: CMakeLists.txt  geometry_utils.cpp  global_utils.cpp  map_utils.cpp  math_utils.cpp  occupancy_map.cpp  params.cpp  path_utils.cpp
